<resources>
    <string name="app_name">meZemplettes</string>
    <string name="title_activity_maps">meZemplettes</string>
    <string name="default_info_title">Titre par défaut</string>
    <string name="default_info_snippet">Défaut snippet</string>
    <string name="ajouter_une_liste">Ajouter une liste</string>
    <string name="adress">Adresse</string>
    <string name="editionListeCourse">Edition liste de course</string>
    <string name="magasin">Magasin</string>
    <string name="phone">Téléphone</string>
    <string name="rating">Note</string>
    <string name="website">Site Web</string>
    <string name="businessStatus">Status d\'ouverture</string>
    <string name="opHours">Horaires d\'ouverture</string>
    <string name="CLOSED_PERMANENTLY">Fermé définitivement</string>
    <string name="CLOSED_TEMPORARILY">Fermé temporairement</string>
    <string name="OPERATIONAL">Ouvert</string>
    <string name="Alerte">Alerte</string>
    <string name="SuppItemListCourse">Voulez vous supprimer cet élément de votre liste de course ?</string>
    <string name="ArticleDejaPresent">Article déjà présent dans votre liste !</string>
    <string name="ProduitNonRenseigné">Veuillez renseigner un produit !</string>
    <string name="SuppListCourse">Voulez vous supprimer cette liste de course ?</string>
    <string name="ElemSupprimé">Element supprimé</string>
    <string name="Supermarché">"Supermarché au : "</string>
    <string name="SelectionnerRayon">"Veuillez sélectionner un rayon !"</string>
    <string name="FruitLegumes">"Fruits &amp; Légumes"</string>
    <string name="Surgelés">"Surgelé"</string>
    <string name="Boulangerie">"Boulangerie"</string>
    <string name="Viande">"Viande"</string>
    <string name="Poissons">"Poissons"</string>
    <string name="Crémerie">"Crémerie"</string>
    <string name="HygièneBeauté">"Hygiène &amp; Beauté"</string>
    <string name="Autres">"Autres"</string>
    <string name="elementAAcheter">Element à acheter</string>
    <string name="rayon">Rayon</string>
    <string name="ajouterProduit">Ajouter produit</string>
    <string name="valider">Valider</string>
    <string name="mesListesDeCourses">Mes listes de courses</string>



</resources>